[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/CartoonForest3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/UI/button.png" type="Texture" id=2]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/StartMenu.gd" type="Script" id=4]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 227.0
margin_top = 35.0
margin_right = 227.0
margin_bottom = 35.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -737.0
margin_top = -335.0
margin_right = 287.0
margin_bottom = 265.0
texture = ExtResource( 1 )
expand = true

[node name="NormalGame" type="TextureButton" parent="."]
margin_left = 176.0
margin_top = 27.0
margin_right = 407.0
margin_bottom = 118.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="NormalGame"]
margin_left = 29.0
margin_top = 29.0
margin_right = 207.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "NORMAL GAME"
__meta__ = {
"_edit_lock_": true
}

[node name="RandomGame" type="TextureButton" parent="."]
margin_left = 181.0
margin_top = 150.0
margin_right = 412.0
margin_bottom = 241.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="RandomGame"]
margin_left = 29.0
margin_top = 29.0
margin_right = 207.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "RANDOM GAME"
__meta__ = {
"_edit_lock_": true
}

[node name="Count" type="TextureButton" parent="."]
margin_left = -176.0
margin_top = 300.0
margin_right = 24.0
margin_bottom = 375.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Count"]
margin_left = 16.0
margin_top = 21.0
margin_right = 181.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "COUNT TILES"

[node name="Classic" type="TextureButton" parent="."]
margin_left = 191.0
margin_top = 294.0
margin_right = 391.0
margin_bottom = 369.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Classic"]
margin_left = 46.0
margin_top = 21.0
margin_right = 176.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "CLASSIC"

[node name="MatchMore" type="TextureButton" parent="."]
margin_left = 528.0
margin_top = 295.0
margin_right = 728.0
margin_bottom = 370.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="MatchMore"]
margin_left = 29.0
margin_top = 20.0
margin_right = 176.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "MATCH ANY"

[node name="Exit" type="TextureButton" parent="."]
margin_left = 201.0
margin_top = 437.0
margin_right = 370.0
margin_bottom = 502.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Exit"]
margin_left = 52.0
margin_top = 16.0
margin_right = 121.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "EXIT"

[connection signal="pressed" from="NormalGame" to="." method="_on_NormalGame_pressed"]
[connection signal="pressed" from="RandomGame" to="." method="_on_RandomGame_pressed"]
[connection signal="pressed" from="Count" to="." method="_on_Count_pressed"]
[connection signal="pressed" from="Classic" to="." method="_on_Classic_pressed"]
[connection signal="pressed" from="MatchMore" to="." method="_on_MatchMore_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
